--- a/assets/highscore-style.css
+++ b/assets/highscore-style.css
@@ -18,10 +18,11 @@ canvas {
 }
 
 h1 {
-    position: fixed;
+    position: absolute;
     margin: 0 auto;
     bottom: 1em;
     left: 0;
+    top: 0;
     right: 0;
     width: 20em;
     text-align: center;
