--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@
   font-size: 75%;
   font-family: 'Mountains of Christmas';
   color: #fff;
+  overflow: hidden;
 }
 
 h1 {
